<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_background"

    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">


        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/personal_space_baby"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_to_application_title" />

        <ImageView
            android:id="@+id/plusimage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/add_picture_signup"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_plus" />

        <TextView
            android:id="@+id/sign_to_application_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_signup_message"
            android:textColor="#696969"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_signup"
            style="@style/Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsOfUse" />


        <TextView
            android:id="@+id/socialmediasignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_signup_social_media"
            android:textColor="@color/md_black_1000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signup" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:onClick="google_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socialmediasignup"
            app:srcCompat="@drawable/goologo" />

        <TextView
            android:id="@+id/termsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/text_signup_terms"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="120px"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:drawableTint="#423C3C"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:minHeight="45dp"
            android:paddingLeft="8dp"
            android:textAlignment="textEnd"
            android:textColorHint="#423C3C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:drawableTint="#423C3C"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:minHeight="45dp"
            android:paddingLeft="8dp"
            android:textAlignment="textEnd"
            android:textColorHint="#423C3C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:drawableTint="#423C3C"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:minWidth="320dp"
            android:minHeight="45dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#423C3C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="email"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_mail"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="12dp"
            android:drawableTint="#423C3C"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete|textEmailAddress"
            android:minWidth="320dp"
            android:minHeight="45dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColorHint="#423C3C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>